<resources>
    <string name="app_name">MyEcommerceApp</string>
    <string name="title_home">Home</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="gender_string">Gender</string>
    <string name="signup_string">Sign Up</string>
    <string name="register_string">Register</string>
    <string name="login_string">Login</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="name_string">Name</string>
    <string name="email_phone">Phone</string>
    <string name="menu_logout">Logout</string>
    <string name="string_change_language">Change Language</string>
    <string name="string_change_password">Change Password</string>
    <string name="old_password_string">Old Password</string>
    <string name="new_password_string">New Password</string>
    <string name="confirm_new_password_string">Confirm New Password</string>
    <string name="save_string">Save</string>
    <string name="waiting_string">Waiting..</string>
    <string name="ok">OK</string>
    <string name="success">%1$s Success</string>
    <string name="successfully">%1s is successfully</string>
    <string name="validation">Are you sure you want to %1s?</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By</string>
    <string name="currency_code">Rp %1$s</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="stock_string">Stock</string>
    <string name="stock_with_value_string">Stock : %1$s</string>
    <string name="size_string">Size</string>
    <string name="type_string">Type</string>
    <string name="weight_string">Weight</string>
    <string name="double_dot">:</string>
    <string name="description_string">Description</string>
    <string name="lorem_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et integer turpis fermentum pulvinar adipiscing accumsan, dignissim viverra. Quisque hendrerit ac ipsum, malesuada odio netus. Eu, mauris ullamcorper neque ullamcorper arcu. Amet, condimentum adipiscing enim eu feugiat feugiat pharetra, tristique. Interdum ipsum amet, a nec. Fermentum in viverra suscipit at at sit. Metus condimentum augue erat.</string>
    <string name="buy_string">Buy</string>
    <string name="trolly_string">Trolley</string>
    <string name="total">Total</string>
    <string name="buy_now">Buy Now - %1$S</string>
    <string name="menu_share">Share</string>
    <string name="order_is_successfull">Your Order Is Successfull</string>
    <string name="give_your_rating">Give Your Rating</string>
    <string name="submit_string">Submit</string>
    <string name="success_add_product_to_trolly">Added To Trolley</string>
    <string name="success_remove_product_from_trolly">Removed From Trolley</string>
    <string name="failed_add_product_to_trolly">Not Enough Stock</string>
    <string name="product_is_already_exist_in_trolly">This Product Is Already Exist In Trolly</string>
    <string name="select_all_string">Select All</string>
    <string name="trolley_string">Trolley</string>
    <string name="total_price">Total Price</string>
    <string name="retry">Retry</string>
    <string name="other_products">Other Products</string>
    <string name="search_history">Search History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_product_is_empty">Other Product is Empty</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="notification_string">Notification</string>
    <string name="no_notification_string">No Notification</string>
    <string name="menu_check_string">Menu Check</string>
    <string name="multiple_select_title">Multiple Select</string>
</resources>