<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bagaspardanailham.myecommerceapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetailActivity"
            app:destination="@id/productDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bagaspardanailham.myecommerceapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_productDetailActivity"
            app:destination="@id/productDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bagaspardanailham.myecommerceapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/productDetailActivity"
        android:name="com.bagaspardanailham.myecommerceapp.ui.detail.ProductDetailActivity"
        android:label="activity_product_detail"
        tools:layout="@layout/activity_product_detail" >
        <argument
            android:name="idProduct"
            app:argType="integer"
            android:defaultValue="0" />
    </activity>
</navigation>